"User management commit new"

--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
       <shape android:shape="rectangle"/>
-          <corners android:redius="30dp"/>
+          <corners android:radius="30dp"/>
           <gradiant android:angle="0" android:startColor="#0C0229" android:endColor="#281745"/>
   </item>
 </selector>
