--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -12,10 +12,10 @@
         android:layout_height="60dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="  Enter your Address"
+        android:hint="  Enter your Email"
         android:inputType="textPersonName"
         android:paddingStart="24dp"
-        android:textColorHint="@color/material_dynamic_neutral_variant70"
+        android:textColorHint="#D3D3D3"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +29,8 @@
         android:layout_width="177dp"
         android:layout_height="56dp"
         android:layout_marginTop="224dp"
-        android:text="Address"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:text="Email"
+        android:textColor="#FFFFFF"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
         app:layout_constraintHorizontal_bias="0.013"
@@ -44,10 +44,10 @@
         android:layout_marginTop="544dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="Enter your Gender"
+        android:hint="  Re-enter your password "
         android:inputType="textPersonName"
         android:paddingStart="24dp"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#D3D3D3"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +58,8 @@
         android:layout_width="168dp"
         android:layout_height="48dp"
         android:layout_marginTop="96dp"
-        android:text="Full Name"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:text="Username"
+        android:textColor="#FFFFFF"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -71,8 +71,8 @@
         android:layout_width="260dp"
         android:layout_height="42dp"
         android:layout_marginTop="492dp"
-        android:text="Gender"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:text="Re-Password"
+        android:textColor="#FFFFFF"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
         app:layout_constraintHorizontal_bias="0.0"
@@ -85,10 +85,10 @@
         android:layout_height="57dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="  Enter your Full Name"
+        android:hint="  Enter your Username"
         android:inputType="textPersonName"
         android:paddingStart="24dp"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#D3D3D3"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,10 +103,10 @@
         android:layout_height="60dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="  Enter your Age"
+        android:hint="  Enter your Password"
         android:inputType="textPersonName"
         android:paddingStart="24dp"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#D3D3D3"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,8 +119,8 @@
         android:layout_width="177dp"
         android:layout_height="39dp"
         android:layout_marginTop="356dp"
-        android:text="Age"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:text="Password"
+        android:textColor="#FFFFFF"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
         app:layout_constraintHorizontal_bias="0.0"
@@ -151,11 +151,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/pngtree_city_science_and_technology_city_blue_technology_sense_technology_lines_picture_image_1473376"
-        android:text="CONTINUE"
+        android:text="Sign Up"
+        android:textColor="@color/white"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95" />
+        app:layout_constraintVertical_bias="0.951" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
