--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,12 @@
     android:background="@drawable/futuristic_virtual_sci_fi_city_163855_72">
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/signuptextView"
         android:layout_width="354dp"
         android:layout_height="69dp"
         android:text="Don't have an account? Sign Up  "
         android:textAlignment="center"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:textColor="#FFFFFF"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="39dp"
         android:layout_marginTop="144dp"
         android:text="Email"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:textColor="#FFFFFF"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
         app:layout_constraintHorizontal_bias="0.017"
@@ -38,12 +38,13 @@
         android:id="@+id/textView2"
         android:layout_width="236dp"
         android:layout_height="51dp"
-        android:layout_marginTop="416dp"
+        android:layout_marginTop="436dp"
         android:text="Forgot your password?"
         android:textAlignment="center"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:textColor="#FFFFFF"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +57,7 @@
         android:hint="  Enter your Email"
         android:inputType="textPersonName"
         android:paddingStart="24dp"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#D3D3D3"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +75,7 @@
         android:hint="  Enter your Password"
         android:inputType="textPersonName"
         android:paddingStart="24dp"
-        android:textColorHint="@color/material_dynamic_neutral_variant70"
+        android:textColorHint="#D3D3D3"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,9 +88,9 @@
         android:id="@+id/textView4"
         android:layout_width="290dp"
         android:layout_height="55dp"
-        android:layout_marginTop="288dp"
+        android:layout_marginTop="296dp"
         android:text="Password"
-        android:textColor="@color/material_dynamic_neutral99"
+        android:textColor="#FFFFFF"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
         app:layout_constraintHorizontal_bias="0.0"
@@ -98,12 +99,13 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="110dp"
-        android:layout_height="56dp"
+        android:layout_width="153dp"
+        android:layout_height="59dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/pngtree_city_science_and_technology_city_blue_technology_sense_technology_lines_picture_image_1473376"
         android:text="Login"
+        android:textColor="@color/white"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
