--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/papers_co_bl95_art_night_anime_city_33_iphone6_wallpaper"
     tools:context=".MainActivity">
 
+
     <Button
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button"
@@ -21,26 +22,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.348" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.924" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button7"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="350dp"
         android:layout_height="70dp"
-        android:layout_marginTop="216dp"
         android:background="@drawable/pngtree_city_science_and_technology_city_blue_technology_sense_technology_lines_picture_image_1473376"
         android:text="Login"
-
         android:textColor="?attr/colorOnPrimary"
         android:textSize="25dp"
-
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.791" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -57,13 +57,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Explore your future job with us"
+        android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.373" />
+        app:layout_constraintVertical_bias="0.384" />
 
     <TextView
         android:id="@+id/textView"
@@ -73,13 +75,13 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/berkshire"
+        android:gravity="center"
         android:text="Welcome To FineX"
-        android:textAlign="center"
-        android:textColor="@android:color/background_light"
+        android:textColor="#FFFFFF"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintHorizontal_bias="0.724"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
